# meshtastic-map-manager

./: .gitignore  README.md  pyproject.toml
etc/: config.yaml  synchmaps-config.yaml
meshmapper/: __init__.py  database.py  download.py  synchmaps.py
